Fixing deployment issues

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -50,9 +50,9 @@
         <input type="submit" value="Lägg till kurs">
     </form>
 
-    <% if(locals.error != "") { %>
+    <!-- <% if(locals.error != "") { %>
         <p id="error"> <%= locals.error %></p>
-    <% } %>
+    <% } %> -->
     </main>
     <footer>
         <p>Backend-baserad webbutveckling</p>
