--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,7 @@
                 </tr>
             </thead>
             <tbody>
-                <% courses.forEach((course) => { %>
+               <!--  <% courses.forEach((course) => { %>
                     <tr>
                         <td><%= course.coursecode %></td>
                         <td><%= course.coursename %></td>
@@ -57,7 +57,7 @@
                         <td> <a href="<%= course.syllabus %>">Kursplan</a> </td>
                         <td><a href="/delete/<%= course.id %>" id="btn">Ta bort</a></td>
                     </tr>
-                <% }); %>
+                <% }); %> -->
             </tbody>
         </table>
     </section>
