fixed Button error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
                         <td><%= course.coursename %></td>
                         <td><%= course.progression %></td>
                         <td> <a href="<%= course.syllabus %>">Kursplan</a> </td>
-                        <td><a href="/delete/<%= course.id %>" id="btn">Ta bort</a></td>
+                        <td><a href="/delete/<%= course.id %>" class="btn">Ta bort</a></td>
                     </tr>
                 <% }); %>
             </tbody>
