--- a/public/style.css
+++ b/public/style.css
@@ -153,7 +153,7 @@ tbody tr:hover {
     background-color: rgb(250, 176, 149); 
 }
 
-#btn{
+.btn{
     display: inline-block;
     padding: 0.5em 0.5em; 
     background-color: #cd5852; 
@@ -165,7 +165,7 @@ tbody tr:hover {
     transition: background-color 0.2s ease; 
 }
 
-#btn:hover {
+.btn:hover {
     background-color: #3a0d0d;
 }
 
@@ -313,7 +313,7 @@ footer{
         padding: 0.1rem;
     }
 
-    #btn{
+    .btn{
         padding: 0.2em 0.1em; 
     }
 }
